[package]
name = "lost-in-korea"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ctrlc = "3.4"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
getrandom = "0.2"
base64 = "0.21"
rand_core = { version = "0.6", features = ["getrandom"] }
which = "6.0"
